test/end-to-end/compile-errors/alias-not-allowed.crow
main void()
	_ bar = 1,

foo alias
	foo

bar alias
	foo[]
